fix popup on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@ body {
 }
 .app {
   background-color: #282c34;
-  max-height: 100vh;
   width: 100vw;
 }
 
